# ris-alpha

./: .bashrc  .gitignore  README.md  bashrc.txt  points_0.txt  points_1.txt  ris.pgm  ris.yaml  ris_processed.pgm  ris_processed2.pgm  ris_processed_1.pgm  ris_processed_old.pgm  ris_processed_old1.pgm  tocke.txt  tocke_proc.txt
workspaces/introduction-to-ROS/src/exercise4/: CMakeLists.txt  gazebo_keyboard_ctrl.txt  package.xml
workspaces/introduction-to-ROS/src/exercise4/launch/: start_robot.launch
workspaces/introduction-to-ROS/src/exercise4/scripts/: .breadcrumbs.swp  .range_finder.py.swn  .range_finder.py.swp  breadcrumbs  range_finder.py
workspaces/introduction-to-ROS/src/exercise5/: CMakeLists.txt  package.xml
workspaces/introduction-to-ROS/src/exercise5/msg/: EllipseData.msg
workspaces/introduction-to-ROS/src/exercise5/recordings/: I1.txt  output.txt
workspaces/introduction-to-ROS/src/exercise5/scripts/: cameraSubscriber.py  detect_ellipse.py  detect_rings
workspaces/introduction-to-ROS/src/exercise5/tests/: step_by_step_ring_detection.py
workspaces/tasks/src/task1/: CMakeLists.txt  frames.gv  package.xml  ris_processed.pgm
workspaces/tasks/src/task1/launch/: task1.launch
workspaces/tasks/src/task1/msg/: CheckpointProcessorResponse.msg
workspaces/tasks/src/task1/recordings/: rings2.bag  rings3.bag
workspaces/tasks/src/task1/scripts/: .ellipse_locator.py.swp  checkpoint_processor.py  depth_cloud_subscriber.py  depth_mat.txt  ellipse_locator.py  ellipse_locator2.py  ellipse_locator3.py  ellipse_locator4.py  get_checkpoints.py  ime_fajla.txt  main.py  main2.py  main3.py  main4.py  ring_detector.py  ring_detector_tmp.py  targetmarker.py  test.py  toroid_detector.py
workspaces/tasks/src/task1/scripts/1/: ellipse_locator.py
workspaces/tasks/src/task1/scripts/2/: .main.py.swp  get_ell_face_agl.py  main.py  targetmarker.py
workspaces/tasks/src/task1/srv/: Checkpoint_res.srv  EllipseLocator.srv
workspaces/tasks/src/task3/: CMakeLists.txt  package.xml  package.xml.orig  setup.py
workspaces/tasks/src/task3/launch/: cylinder_color_classification_test.launch  find_cylinder.launch  ring_color_classification_learn.launch  ring_color_classification_learn_cyl.launch  ring_color_classification_test.launch  start_robot.launch  task3.launch
workspaces/tasks/src/task3/msg/: CylinderData.msg  CylinderImageFeedback.msg  CylinderLocation.msg  EllipseData.msg  RingData.msg  SayCommand.msg  TreasureLocatorResponse.msg
workspaces/tasks/src/task3/scripts/: .stage2.py.swo  colour_detection.py  colour_detection2.py  colour_detection_trainer.py  cylinder_color_list.txt  data_green2.mat  detectionObjectiveApproachHandler.py  main.py  master.py  sound_player.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py  target_green2.mat  test.py  training_data_cyl.mat  training_data_ell.mat  training_data_target_cyl.mat  training_data_target_ell.mat
workspaces/tasks/src/task3/scripts/checkpoint-generation/: get_checkpoints.py
workspaces/tasks/src/task3/scripts/checkpoint_generation/: checkpoint_processor.py  get_checkpoints.py
workspaces/tasks/src/task3/scripts/classification/: classification.py
workspaces/tasks/src/task3/scripts/color-classification/: colour_detection.py  colour_recognition_tester.py
workspaces/tasks/src/task3/scripts/color_classification/: bumbar.txt  burek.npy  colour_detection.py  colour_detection2.py  colour_detection_trainer.py  colour_detection_trainer_cyl.py  colour_detection_trainer_ell.py  colour_detection_trainer_ring.py  colour_detector.py  colour_detector2.py  colour_detector_cyl.py  colour_detector_cyl2.py  colour_detector_ell.py  colour_detector_ell2.py  colour_detector_ring2.py  cylinder_colour_classifier.joblib  data_black.mat  data_black_ell.mat  data_blue_cyl.mat  data_blue_ell.mat  data_green.mat  data_green_cyl.mat  data_green_ell.mat  data_red2.mat  data_red_cyl.mat  data_red_ell.mat  data_yellow_cyl.mat  data_yellow_ell.mat  data_yellow_ell10.mat  data_yellow_ell2.mat  ellipse_colour_classifier.joblib  pixel_classifier_dataset_train.txt  ring_colour_classifier.joblib  target_black.mat  target_blue.mat  target_green.mat  target_green_5.mat  test.py  testic.txt.npy  todo.txt  (+7 more)
workspaces/tasks/src/task3/scripts/color_classification_alt/: colour_detection.py  colour_detection_trainer_cyl.py  colour_detector.py  colour_detector_ell.py  test.txt  (+1 more)
workspaces/tasks/src/task3/srv/: CylinderLocation.srv  DigitDetector.srv  MapDetector.srv  ReconfigParams.srv  RingApproachPoint.srv  TreasureLocator.srv  ValidRegionsMap.srv
(+583 files in other folders)
